// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoryElement displays correct npc thumbnail for model "a_npc_defaultnpc" 1`] = `
<img
  alt="LearningImage!"
  class="z-20 invisible object-contain h-0 -scale-x-100 brightness-125 lg:visible lg:h-full "
  data-testid="npcImage"
  src="a-quizbg-defaultnpc-close.png"
/>
`;

exports[`StoryElement displays correct npc thumbnail for model "a_npc_dozentlukas" 1`] = `
<img
  alt="LearningImage!"
  class="z-20 invisible object-contain h-0 -scale-x-100 brightness-125 lg:visible lg:h-full "
  data-testid="npcImage"
  src="a-quizbg-dozentlukas-close.png"
/>
`;

exports[`StoryElement displays correct npc thumbnail for model "a_npc_sheriffjustice" 1`] = `
<img
  alt="LearningImage!"
  class="z-20 invisible object-contain h-0 -scale-x-100 brightness-125 lg:visible lg:h-full "
  data-testid="npcImage"
  src="a-npc-sheriffjustice-close.png"
/>
`;

exports[`StoryElement displays correct npc thumbnail for model "a-quizbg-alerobot" 1`] = `
<img
  alt="LearningImage!"
  class="z-20 invisible object-contain h-0 -scale-x-100 brightness-125 lg:visible lg:h-full "
  data-testid="npcImage"
  src="a-quizbg-alerobot-close.png"
/>
`;
